--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
     </header>
     <main class="page-main">
-        <div>
-            TEST
-        </div>
+        <p class="titre-main-page">
+            Bienvenue sur le wiki le plus complet sur la trilogie du Seigneur des Anneaux et de ses derives !
+        </p>
     </main>
     <footer>
     </footer>
