--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style1.css" rel="stylesheet" type="text/css" media="all">
     <link href="container.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Police\stylesheet.css" media="all">
+    <link rel="stylesheet" type="text/css" href="Font\stylesheet.css" media="all">
     <link href="balise.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css" media="all">
+
 
     <title>Le Seigneur des Anneaux</title>
 </head>
@@ -23,7 +24,7 @@
             Bonne visite ! </p>
         <div class="sommaire" id="text-sommaire" >
             <ul> <p>Sommaire</p>
-                <li> <a href="#personnage"> Personnages</a> </li>
+                <li> <a href="#personnages"> Personnages</a></li>
                 <li> <a href="#lieux"> Lieux</a></li>
                 <li> <a href="#races"> Races</a></li>
                 <li> <a href="#objets"> Objets</a></li>
@@ -33,13 +34,68 @@
     </div>
     <div class="main-container">
         <div class="personnage-container">
-            <h3 id="personnages"> Personnages</h3>
+            <h3 id="personnages"></h3>
+            <div class="container">
+                <div class="slideshow">
+                <div id="slide-1" class="slide">
+                    <h1 class="text-accueil">Les personnages</h1>
+                    <a href="#slide-5"></a>
+                    <a href="#slide-2"></a>
+                    <img src="images\personnages\frodon.jpg" />
+                </div>
+                <div id="slide-2" class="slide">
+                    <h1 class="text-accueil">Les personnages</h1>
+                    <a href="#slide-1"></a>
+                    <a href="#slide-3"></a>
+                    <img src="images\personnages\gandalf.jpg" />
+                </div>
+                <div id="slide-3" class="slide">
+                    <h1 class="text-accueil">Les personnages</h1>
+                    <a href="#slide-2"></a>
+                    <a href="#slide-4"></a>
+                    <img src="images\personnages\aragorn.jpg" />
+                </div>
+                <div id="slide-4" class="slide">
+                    <h1 class="text-accueil">Les personnages</h1>
+                    <a href="#slide-3"></a>
+                    <a href="#slide-5"></a>
+                    <img src="images\personnages\legolas.jpg" />
+                </div>
+                <div id="slide-5" class="slide">
+                    <h1 class="text-accueil">Les personnages</h1>
+                    <a href="#slide-4"></a>
+                    <a href="#slide-1"></a>
+                    <img src="images\personnages\sauron.jpg" />
+                </div>
+                </div>
+            </div>
         </div>
         <div class="lieux-container">
-            <h3 id="lieux"> Lieux</h3>
-            <p>
-
-            </p>
+            <div class="personnage-container">
+                <h3 id="personnages"></h3>
+                <div class="container">
+                    <div class="slideshow">
+                    <div id="slide-6" class="slide">
+                        <h1 class="text-accueil">Les lieux</h1>
+                        <a href="#slide-8"></a>
+                        <a href="#slide-7"></a>
+                        <img src="images\lieux\comte.jpg" />
+                    </div>
+                    <div id="slide-7" class="slide">
+                        <h1 class="text-accueil">Les lieux</h1>
+                        <a href="#slide-6"></a>
+                        <a href="#slide-8"></a>
+                        <img src="images\lieux\milieu.jpg" />
+                    </div>
+                    <div id="slide-8" class="slide">
+                        <h1 class="text-accueil">Les lieux</h1>
+                        <a href="#slide-7"></a>
+                        <a href="#slide-6"></a>
+                        <img src="images\lieux\mordor.jpg" />
+                    </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="race-container">
             <h3 id="races"> Races</h3>
@@ -54,6 +110,6 @@
             </p>
         </div>
     </div>
-    
+
 </body>
 </html>
