--- a/index.html
+++ b/index.html
@@ -34,35 +34,30 @@
     </div>
     <div class="main-container">
         <div class="personnage-container">
-            <h3 id="personnages"></h3>
+            <h3 class="text-accueil" id="personnages">Les personnages</h3>
             <div class="container">
                 <div class="slideshow">
                 <div id="slide-1" class="slide">
-                    <h1 class="text-accueil">Les personnages</h1>
                     <a href="#slide-5"></a>
                     <a href="#slide-2"></a>
                     <img src="images\personnages\frodon.jpg" />
                 </div>
                 <div id="slide-2" class="slide">
-                    <h1 class="text-accueil">Les personnages</h1>
                     <a href="#slide-1"></a>
                     <a href="#slide-3"></a>
                     <img src="images\personnages\gandalf.jpg" />
                 </div>
                 <div id="slide-3" class="slide">
-                    <h1 class="text-accueil">Les personnages</h1>
                     <a href="#slide-2"></a>
                     <a href="#slide-4"></a>
                     <img src="images\personnages\aragorn.jpg" />
                 </div>
                 <div id="slide-4" class="slide">
-                    <h1 class="text-accueil">Les personnages</h1>
                     <a href="#slide-3"></a>
                     <a href="#slide-5"></a>
                     <img src="images\personnages\legolas.jpg" />
                 </div>
                 <div id="slide-5" class="slide">
-                    <h1 class="text-accueil">Les personnages</h1>
                     <a href="#slide-4"></a>
                     <a href="#slide-1"></a>
                     <img src="images\personnages\sauron.jpg" />
@@ -72,23 +67,20 @@
         </div>
         <div class="lieux-container">
             <div class="personnage-container">
-                <h3 id="personnages"></h3>
+                <h3 class="text-accueil" id="lieux">Les lieux</h3>
                 <div class="container">
                     <div class="slideshow">
                     <div id="slide-6" class="slide">
-                        <h1 class="text-accueil">Les lieux</h1>
                         <a href="#slide-8"></a>
                         <a href="#slide-7"></a>
                         <img src="images\lieux\comte.jpg" />
                     </div>
                     <div id="slide-7" class="slide">
-                        <h1 class="text-accueil">Les lieux</h1>
                         <a href="#slide-6"></a>
                         <a href="#slide-8"></a>
                         <img src="images\lieux\milieu.jpg" />
                     </div>
                     <div id="slide-8" class="slide">
-                        <h1 class="text-accueil">Les lieux</h1>
                         <a href="#slide-7"></a>
                         <a href="#slide-6"></a>
                         <img src="images\lieux\mordor.jpg" />
